platform/kubeflow/upstream-lite/oauth2-proxy-authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-all
  namespace: oauth2-proxy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
  action: ALLOW
  rules:
    - {}
